--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,14 @@ appnope==0.1.4
 asttokens==2.4.1
 backcall==0.2.0
 beautifulsoup4==4.12.3
+certifi==2024.6.2
+charset-normalizer==3.3.2
 comm==0.2.2
 debugpy==1.8.1
 decorator==5.1.1
 executing==2.0.1
 html5lib==1.1
+idna==3.7
 importlib_metadata==7.1.0
 ipykernel==6.29.4
 ipython==8.12.3
@@ -30,6 +33,7 @@ Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyzmq==26.0.3
+requests==2.32.3
 six==1.16.0
 soupsieve==2.5
 stack-data==0.6.3
@@ -37,6 +41,7 @@ tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.1
 wcwidth==0.2.13
 webencodings==0.5.1
 zipp==3.19.2
