--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ ipython==8.12.3
 jedi==0.19.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+lxml==5.2.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==1.24.4
